fix: update styles for cart button and navigation alignment

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,13 @@ button {
   z-index: 10;
   background-color: var(--color-card);
 }
-
+#cart {
+  color: var(--color-accent);
+  padding: 0.7rem;
+  background-color: #0d1117;
+  border-radius: 50%;
+  border: 1px solid var(--color-accent);
+}
 li {
   list-style: none;
 }
@@ -46,6 +52,7 @@ nav ul {
   flex-direction: row;
   gap: 2rem;
   justify-content: flex-end;
+  align-items: center;
   margin-right: 2rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
